front end request handling

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@
 # reference these in your code with process.env.SECRET
 
 JWT_SECRET=QUEEN
-DATABASE_URL=mongodb://markyapp:asdf1234@ds111441.mlab.com:11441/learn-mlab-db
+DATABASE_URL=mongodb://localhost/yappr-data
 
 # note: .env is a shell file so there can't be spaces around =
