--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "jwt-simple": "^0.5.5",
     "moment": "^2.23.0",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "req-flash": "0.0.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
