--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MarkYapp/trackr"
+    "url": "https://github.com/MarkYapp/yappr"
   }
 }
