--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.4.0",
     "jwt-simple": "^0.5.5",
     "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
