--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "newrelic": "^6.14.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
